Sat Jan 19 07:22:29 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: refactoring: rename lvar.

Tue Jan 15 02:34:00 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: should generate special
	  token for block comment, instead of just skipping.

Tue Jan 15 02:31:14 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: LOOKAHEAD is useless here.

Tue Jan 15 01:04:55 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml: read user defined property file from $HOME.

Tue Jan 15 00:51:41 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml: now default task is "jar" instead of "compile".

Tue Jan 15 00:48:47 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml (recompile): build jar file.

Tue Jan 15 00:30:43 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml: new task test.

	* build.xml: new task comptest.

	* test/Makefile: new task compile.

Tue Jan 15 00:21:38 2008  Minero Aoki  <aamine@loveruby.net>

	* test/test.sh: should be executable from any directory.

Tue Jan 15 00:16:18 2008  Minero Aoki  <aamine@loveruby.net>

	* cbc: $basedir should be relative to cbc command.

Tue Jan 15 00:11:08 2008  Minero Aoki  <aamine@loveruby.net>

	* test/cbc -> ./cbc

Tue Jan 15 00:09:47 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml: new task recompile.

	* build.xml: new task jar.

	* build.xml: new task clean-build.

	* build.xml: new task dist.

	* build.properties: remove unused JJT properties.

	* test/cbc: use jar file.

	* test/Makefile

Mon Jan 14 21:48:59 2008  Minero Aoki  <aamine@loveruby.net>

	* test/cbc: provide -I option to add load path.

	* net/loveruby/cflat/compiler/Compiler.java: new option -I.

	* net/loveruby/cflat/parser/Parser.jj: allow nested library ID
	  "a.b.c".

	* net/loveruby/cflat/compiler/LibraryLoader.java: ditto.

	* import/unistd.hb: declare fork, getpid, getppid.

	* import/sys/types.hb: new file.
